Changed Expressions.getOperands to return ImmutableList